RESOLVED FIXED304220
ComputePassEncoder::setBindGroup is missing an early return
https://bugs.webkit.org/show_bug.cgi?id=304220
Summary ComputePassEncoder::setBindGroup is missing an early return
Mike Wyrzykowski
Reported 2025-12-15 17:13:27 PST
ComputePassEncoder::setBindGroup is missing an early return
Attachments
Mike Wyrzykowski
Comment 1 2025-12-15 17:14:06 PST
Mike Wyrzykowski
Comment 2 2025-12-15 17:18:39 PST
EWS
Comment 3 2025-12-17 07:54:49 PST
Committed 304593@main (cdffdfba669e): <https://commits.webkit.org/304593@main> Reviewed commits have been landed. Closing PR #55445 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.