ComputePassEncoder::setBindGroup is missing an early return https://bugs.webkit.org/show_bug.cgi?id=304220 rdar://166494086

Reviewed by Geoffrey Garen.

Clearing out bind groups was added to the WebGPU specification,
they are handled for RenderPassEncoders but the ComputePassEncoder
is missing a return statement leading to null-ptr crashes.

Test: fast/webgpu/nocrash/fuzz-304220.html

* LayoutTests/fast/webgpu/nocrash/fuzz-304220-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-304220.html: Added.
* Source/WebGPU/WebGPU/ComputePassEncoder.mm:
(WebGPU::ComputePassEncoder::setBindGroup):

Canonical link: https://commits.webkit.org/304593@main